[package]
name = "day11"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }

#  left: [Position { line: 0, column: 4 }, Position { line: 1, column: 10 }, Position { line: 2, column: 0 }, Position { line: 5, column: 9 }, Position { line: 6, column: 1 }, Position { line: 7, column: 13 }, Position { line: 10, column: 10 }, Position { line: 11, column: 0 }]